--- a/index.html
+++ b/index.html
@@ -122,9 +122,15 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
+
 
 
 
@@ -167,6 +173,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
+
 
 
 
@@ -259,10 +268,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
 
 
 
@@ -339,6 +354,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -379,10 +397,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
+
 
 
 
@@ -465,6 +489,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
                         Songs can have up to 15 instrumental voices and
                         a percussion track with instruments chosen from
                         a soundbank of 128 instruments.&nbsp; Either the
@@ -485,6 +512,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         to create a song, then <em>File/Tree View</em>
                         and expand the nodes.&nbsp; Select each bar in
                         turn and enter the notes<strong><em></em></strong>.&nbsp;
+
+
+
 
 
 
@@ -692,10 +722,10 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                               style="font-weight: bold;"><a
                                 href="https://launchpad.net/%7Ewebupd8team/+archive/ubuntu/java"
                                 class="nounderline" target="_blank"><span
-                                  style="font-style: italic;"></span></a></span>.<br>
-                            <br>
+                                  style="font-style: italic;"></span></a></span>.<!--<br>
+                                <br>
                             Sample songs are available from the "Demo"
-                            folder in <i>File/XML Import</i>.</span><span
+                            folder in <i>File/XML Import</i>.--></span><span
                             class="body"><br>
                             <!--
                             Top download destination this month:<img
