--- a/index.html
+++ b/index.html
@@ -125,9 +125,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -173,6 +175,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
 
 
 
@@ -271,10 +274,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -357,6 +362,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -400,10 +406,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
 
 
 
@@ -492,6 +500,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         Songs can have up to 15 instrumental voices and
                         a percussion track with instruments chosen from
                         a soundbank of 128 instruments.&nbsp; Either the
@@ -512,6 +521,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         to create a song, then <em>File/Tree View</em>
                         and expand the nodes.&nbsp; Select each bar in
                         turn and enter the notes<strong><em></em></strong>.&nbsp;
+
 
 
 
@@ -710,11 +720,8 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                               border="0" width="1" height="1"> </form>-->
                         </div>
                         <br>
-                        <div class="left"><span class="body"> The Linux
-                            version (US$ 9.99) is available from the
-                            Ubuntu Software Center.<br>
-                            <br>
-                            Before running <strong>Audovia</strong> on
+                        <div class="left"><span class="body"> Before
+                            running <strong>Audovia</strong> on
                             Microsoft Windows you will first need to
                             install the latest version of Java from <a
                               href="http://java.com/"
