--- a/index.html
+++ b/index.html
@@ -126,9 +126,19 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
+
+
+
 
 
 
@@ -175,6 +185,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
+
+
+
 
 
 
@@ -275,10 +290,20 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
+
+
 
 
 
@@ -363,10 +388,20 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
+
+
+
+
 
 
 
@@ -451,6 +486,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -461,54 +501,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                 <tr>
                   <td valign="top">
                     <blockquote><span class="body"><strong></strong>Make
-                        music on your laptop or PC with <span
-                          style="font-weight: bold;">Audovia</span>.&nbsp;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                        Songs can have up to 15 instrumental voices and
-                        a percussion track with instruments chosen from
-                        a soundbank of 128 instruments.&nbsp; Either the
-                        default soundbank or one of your own can be
-                        used.&nbsp; Songs can be developed, tested and
-                        edited very quickly and easily by virtue of the
-                        database structure and the JFugue MusicString
-                        notation.<br>
+                        music on your Linux laptop or PC with <span
+                          style="font-weight: bold;">Audovia</span> from
+                        the Ubuntu Software Center.&nbsp; Songs can have
+                        up to 15 instrumental voices and a percussion
+                        track with instruments chosen from a soundbank
+                        of 128 instruments.&nbsp; Either the default
+                        soundbank or one of your own can be used.&nbsp;
+                        Songs can be developed, tested and edited very
+                        quickly and easily by virtue of the database
+                        structure and the JFugue MusicString notation.<br>
                         <br>
                         Notes are specified by their name and octave or
                         by their MIDI value and their durations are
@@ -521,6 +523,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         to create a song, then <em>File/Tree View</em>
                         and expand the nodes.&nbsp; Select each bar in
                         turn and enter the notes<strong><em></em></strong>.&nbsp;
+
+
+
+
+
 
 
 
@@ -652,15 +659,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                             class="nounderline" target="_blank"><span
                               style="font-style: italic; font-weight:
                               bold;">Documentation</span></a> for more
-                          information.<br>
-                        </span> <br style="clear:right;">
+                          information.<!--<br>--> </span> <br
+                          style="clear:right;">
                         <!-- <br> -->
                         <div style="margin-left: 40px;">
                           <!--<form style="text-align: center;"
                             action="https://www.paypal.com/cgi-bin/webscr"
-                            method="post" target="_top"> --><span
+                            method="post" target="_top"> -->
+                          <!-- <span
                             class="fullsize"><em>Audovia 3.0.8 for
-                              Microsoft Windows (free)</em> &nbsp;</span>
+                              Microsoft Windows (free)</em> &nbsp;</span> -->
                           <!--
 <a
 href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-8.msi"><img
@@ -668,13 +676,13 @@ href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3
                                 style="border: 0px solid; border: 0px
                                 solid; width: 108px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a> -->
-                          <a
+                          <!-- <a
 href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-8.msi"
                             style="text-decoration:none;"><button
                               type="button"
                               style="background-color:#eeeeee;
                               padding:5px; cursor:pointer"><font
-                                color="#551A8B" face="Verdana"><big><b>Download</b></big></font></button></a>
+                                color="#551A8B" face="Verdana"><big><b>Download</b></big></font></button></a> -->
                           <!--
                             <a
 href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_i386.deb"><img
@@ -720,16 +728,17 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                               border="0" width="1" height="1"> </form>-->
                         </div>
                         <br>
-                        <div class="left"><span class="body"> Before
+                        <div class="left"><span class="body">
+                            <!-- Before
                             running <strong>Audovia</strong> on
                             Microsoft Windows you will first need to
                             install the latest version of Java from <a
                               href="http://java.com/"
-                              class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a><span
-                              style="font-weight: bold;"><a
+                              class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a> -->
+                            <span style="font-weight: bold;"><a
                                 href="https://launchpad.net/%7Ewebupd8team/+archive/ubuntu/java"
                                 class="nounderline" target="_blank"><span
-                                  style="font-style: italic;"></span></a></span>.<!--<br>
+                                  style="font-style: italic;"></span></a></span><!--.<br>
                                 <br>
                             Sample songs are available from the "Demo"
                             folder in <i>File/XML Import</i>.--></span><span
@@ -743,9 +752,8 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
 --></span></div>
                       </div>
                     </blockquote>
-                    <span class="body"><em><br>
-                        <br>
-                      </em></span>
+                    <span class="body"><em><!--<br>
+                        <br>--> </em></span>
                     <div style="text-align: center;"><span class="body"><em>
                           Copyright © 2015&nbsp; Donald G Gray</em><span
                           style="font-style: italic;"></span><span
