--- a/index_old.html
+++ b/index_old.html
@@ -122,29 +122,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-
-
-
-
-
-
-
-
-
-
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -187,16 +167,6 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -289,30 +259,10 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-
-
-
-
-
-
-
-
-
-
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -389,30 +339,10 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-
-
-
-
-
-
-
-
-
-
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -489,16 +419,6 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-
-
-
-
-
-
-
-
-
-
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -509,16 +429,50 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                 <tr>
                   <td valign="top">
                     <blockquote><span class="body"><strong></strong>Make
-                        music on your Linux laptop or PC with <span
-                          style="font-weight: bold;">Audovia</span> from
-                        the Ubuntu Software Center.&nbsp; Songs can have
-                        up to 15 instrumental voices and a percussion
-                        track with instruments chosen from a soundbank
-                        of 128 instruments.&nbsp; Either the default
-                        soundbank or one of your own can be used.&nbsp;
-                        Songs can be developed, tested and edited very
-                        quickly and easily by virtue of the database
-                        structure and the JFugue MusicString notation.<br>
+                        music on your laptop or PC with <span
+                          style="font-weight: bold;">Audovia</span>.&nbsp;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                        Songs can have up to 15 instrumental voices and
+                        a percussion track with instruments chosen from
+                        a soundbank of 128 instruments.&nbsp; Either the
+                        default soundbank or one of your own can be
+                        used.&nbsp; Songs can be developed, tested and
+                        edited very quickly and easily by virtue of the
+                        database structure and the JFugue MusicString
+                        notation.<br>
                         <br>
                         Notes are specified by their name and octave or
                         by their MIDI value and their durations are
@@ -641,16 +595,6 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-
-
-
-
-
-
-
-
-
-
                         Select "Song" and press Play to play back your
                         music.&nbsp; From the <em>File</em> menu, you
                         can export to MIDI, MusicXML or WAV for music
@@ -660,9 +604,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           href="http://audacityteam.org/"><span
                             style="font-style: italic;"><span
                               style="font-weight: bold;">Audacity</span></span></a>,
-                        then exported to MP3.</span>&nbsp; <span
-                        class="body">You can print your scores by
-                        opening the MusicXML files in <a
+                        then exported to MP3.&nbsp; You can print your
+                        scores by opening the MusicXML files in <a
                           class="nounderline" target="_blank"
                           href="https://musescore.org/"><span
                             style="font-style: italic;"><span
@@ -674,16 +617,15 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                             class="nounderline" target="_blank"><span
                               style="font-style: italic; font-weight:
                               bold;">Documentation</span></a> for more
-                          information.<!--<br>--> </span> <br
-                          style="clear:right;">
+                          information.<br>
+                        </span> <br style="clear:right;">
                         <!-- <br> -->
                         <div style="margin-left: 40px;">
                           <!--<form style="text-align: center;"
                             action="https://www.paypal.com/cgi-bin/webscr"
-                            method="post" target="_top"> -->
-                          <!-- <span
+                            method="post" target="_top"> --><span
                             class="fullsize"><em>Audovia 3.0.8 for
-                              Microsoft Windows (free)</em> &nbsp;</span> -->
+                              Windows</em> &nbsp;</span>
                           <!--
 <a
 href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-8.msi"><img
@@ -691,13 +633,13 @@ href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3
                                 style="border: 0px solid; border: 0px
                                 solid; width: 108px; height: 34px;
                                 margin-bottom: 12px;" align="middle"></a> -->
-                          <!-- <a
+                          <a
 href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-8.msi"
                             style="text-decoration:none;"><button
                               type="button"
                               style="background-color:#eeeeee;
                               padding:5px; cursor:pointer"><font
-                                color="#551A8B" face="Verdana"><big><b>Download</b></big></font></button></a> -->
+                                color="#551A8B" face="Verdana"><big><b>Download</b></big></font></button></a>
                           <!--
                             <a
 href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_i386.deb"><img
@@ -743,20 +685,19 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                               border="0" width="1" height="1"> </form>-->
                         </div>
                         <br>
-                        <div class="left"><span class="body">
-                            <!-- Before
-                            running <strong>Audovia</strong> on
+                        <div class="left"><span class="body"> The Linux
+                            version is available from the Ubuntu
+                            Software Center.<br>
+                            <br>
+                            Before running <strong>Audovia</strong> on
                             Microsoft Windows you will first need to
                             install the latest version of Java from <a
                               href="http://java.com/"
-                              class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a> -->
-                            <span style="font-weight: bold;"><a
+                              class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a><span
+                              style="font-weight: bold;"><a
                                 href="https://launchpad.net/%7Ewebupd8team/+archive/ubuntu/java"
                                 class="nounderline" target="_blank"><span
-                                  style="font-style: italic;"></span></a></span><!--.<br>
-                                <br>
-                            Sample songs are available from the "Demo"
-                            folder in <i>File/XML Import</i>.--></span><span
+                                  style="font-style: italic;"></span></a></span>.</span><span
                             class="body"><br>
                             <!--
                             Top download destination this month:<img
@@ -767,8 +708,9 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
 --></span></div>
                       </div>
                     </blockquote>
-                    <span class="body"><em><!--<br>
-                        <br>--> </em></span>
+                    <span class="body"><em><br>
+                        <br>
+                      </em></span>
                     <div style="text-align: center;"><span class="body"><em>
                           Copyright © 2015&nbsp; Donald G Gray</em><span
                           style="font-style: italic;"></span><span
