--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -187,6 +189,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
 
 
 
@@ -299,10 +302,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -399,10 +404,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -499,6 +506,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -526,11 +534,23 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         numerically.&nbsp; You can use notes from C0 to
                         G10, corresponding to MIDI values 0 to
                         127.&nbsp; Middle C is C5.<br>
-                      </span><br>
+                        <br>
+                        The opening phrase of Joy to the World can be
+                        written as:<br>
+                        <br>
+                      </span>
+                      <div style="margin-left: 40px;"><span
+                          style="font-family: Courier New;"><span
+                            class="body">C6h&nbsp; B5q.&nbsp; A5i&nbsp;
+                            G5h.&nbsp; F5q&nbsp; E5h&nbsp; D5h&nbsp;
+                            C5h.</span></span><br>
+                        <span class="body"></span></div>
+                      <span class="body"> </span><br>
                       <span class="body">Within the application, use <em>File/Template</em>
                         to create a song, then <em>File/Tree View</em>
                         and expand the nodes.&nbsp; Select each bar in
                         turn and enter the notes<strong><em></em></strong>.&nbsp;
+
 
 
 
