--- a/index.html
+++ b/index.html
@@ -141,9 +141,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -205,6 +209,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -335,10 +341,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -453,10 +463,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -571,6 +585,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -583,6 +599,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                     <blockquote><span class="body"><strong></strong>Make
                         music on your laptop or PC with <span
                           style="font-weight: bold;">Audovia</span>.&nbsp;
+
+
                         Songs can have up to 15 instrumental voices and
                         a percussion track with instruments chosen from
                         a soundbank of 128 instruments.&nbsp; Either the
@@ -743,6 +761,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         Select "Song" and press Play to play back your
                         music.&nbsp; From the <em>File</em> menu, you
                         can export to MIDI, MusicXML or WAV for music
@@ -773,7 +793,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           <!--<form style="text-align: center;"
                             action="https://www.paypal.com/cgi-bin/webscr"
                             method="post" target="_top"> --> <span
-                            class="fullsize"><em>Audovia 3.0.10 for
+                            class="fullsize"><em>Audovia 3.0.11 for
                               Microsoft Windows</em> &nbsp;</span>
                           <!--<a
 href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-10.msi"><img
@@ -782,7 +802,7 @@ href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3
                               solid; width: 108px; height: 34px;
                               margin-bottom: 12px;" align="middle"></a>-->
                           <a
-href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-10.msi"
+href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-11.msi"
                             style="text-decoration:none;"><button
                               type="button"
                               style="background-color:#eeeeee;
@@ -849,8 +869,8 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                             <br>
                             The Linux version of <span
                               style="font-weight: bold;">Audovia</span>
-                            is available from the Ubuntu Software Center.</span><span
-                            class="body"><br>
+                            is available from the Ubuntu Software
+                            Center.</span><span class="body"><br>
                             <!--
                             Top download destination this month:<img
                               style=" width: 50px; height: 33px;"
