--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <title>Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
-    <meta content="Audovia is an Open Source software application for
-      making music with up to 15 instrumental voices and a percussion
-      track." name="description">
+    <meta content="Audovia is an Open Source application for making
+      music." name="description">
     <meta property="og:image"
       content="http://audovia.com/image/AudoviaHome.png">
     <meta property="og:title" content="Audovia">
@@ -76,8 +75,10 @@
                     <td style=" vertical-align: top;">
                       <div class="centre"><span class="header">Audovia</span><br>
                       </div>
-                      <div class="subheader"><span class="subheader"><em>a
-                            different way to make music</em></span></div>
+                      <div class="subheader"><span class="subheader"><em>a</em></span><span
+                          class="subheader"><em><span class="subheader"><em>n
+                                Open Source application for making</em></span>
+                            music</em></span></div>
                     </td>
                     <td style=" vertical-align: top; text-align: right;
                       width: 180px;">
@@ -86,6 +87,8 @@
 href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         rel="publisher" target="_blank"
                         style="text-decoration:none;display:inline-block;color:#333;text-align:center;
+
+
 
 
 
@@ -203,12 +206,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                           margin-top:8px;">Audovia</span><span
                           style="display:inline-block;vertical-align:top;margin-right:15px;
                           margin-top:8px;"> on</span><img
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -343,10 +350,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -465,10 +476,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -587,6 +602,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -599,6 +616,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                     <blockquote><span class="body"><strong></strong>Make
                         music on your laptop or PC with <span
                           style="font-weight: bold;">Audovia</span>.&nbsp;
+
+
 
 
                         Songs can have up to 15 instrumental voices and
@@ -632,6 +651,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         to create a song, then <em>File/Tree View</em>
                         and expand the nodes.&nbsp; Select each bar in
                         turn and enter the notes<strong><em></em></strong>.&nbsp;
+
+
 
 
 
