--- a/demonstration.html
+++ b/demonstration.html
@@ -5,9 +5,8 @@
     <title>Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
-    <meta content="Audovia is an Open Source software application for
-      making music with up to 15 instrumental voices and a percussion
-      track." name="description">
+    <meta content="Audovia is an Open Source application for making
+      music." name="description">
     <meta property="og:image"
       content="http://audovia.com/image/AudoviaDemonstration.png">
     <meta property="og:title" content="Audovia">
@@ -56,8 +55,8 @@
 </style>
   </head>
   <body>
-    <table border="0" cellpadding="0" cellspacing="0" width="980"
-      align="center">
+    <table width="980" align="center" border="0" cellpadding="0"
+      cellspacing="0">
       <tbody>
         <tr>
           <td class="heading" valign="top" align="center">
@@ -87,8 +86,10 @@
                     <td style=" vertical-align: top;">
                       <div class="centre"><span class="header">Audovia</span><br>
                       </div>
-                      <div class="subheader"><span class="subheader"><em>a
-                            different way to make music</em></span></div>
+                      <div class="subheader"><span class="subheader"><em>a</em></span><span
+                          class="subheader"><em><span class="subheader"><em>n
+                                Open Source application for making</em></span>
+                            music</em></span></div>
                     </td>
                     <td style=" vertical-align: top; text-align: right;
                       width: 180px;">
@@ -195,9 +196,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -400,6 +405,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -419,6 +426,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -467,10 +476,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   color="#551A8B" face="Verdana"><big><b>Video</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -520,6 +533,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
@@ -546,12 +561,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
           <td class="background" valign="top">
-            <table border="0" cellpadding="0" cellspacing="0"
-              width="100%">
+            <table width="100%" border="0" cellpadding="0"
+              cellspacing="0">
               <tbody>
                 <tr>
                   <td valign="top"><audio id="myAudio1"
